Handle queue wait and improve verification

--- a/.github/workflows/friday-sunday-booking.yml
+++ b/.github/workflows/friday-sunday-booking.yml
@@ -110,6 +110,7 @@ jobs:
         with:
           name: sunday-run-artifacts
           path: |
+            $HOME/golfbot_logs/**
             logs/**
             evidence/**
             **/*.html
