Fix artifact path expansion

--- a/.github/workflows/weekly-booking.yml
+++ b/.github/workflows/weekly-booking.yml
@@ -111,7 +111,7 @@ jobs:
         with:
           name: run-artifacts
           path: |
-            $HOME/golfbot_logs/**
+            ${{ env.HOME }}/golfbot_logs/**
             logs/**
             evidence/**
             **/*.html
