Update parallel script: correct groups, timing, 8pm timeout, already-booked handling
- FOUR_BALL: Mullin(2007), Hillard(2008), Rutherford(2009), Rudge(2010)
- TWO_BALL: Lalor(1101), Cheney(1107)
- Login at 6:00pm Sydney (wait_until_sydney gate in each worker)
- Ballot join at 6:30pm, tee sheet at 7:00pm
- Hard timeout at 8:00pm — booking loop runs until then, not before
- 'Already booked' handling: skips unaddable members, fills remaining slots
- Workflow cron 07:00 UTC (= 18:00 AEDT) — Python handles timing internally
- Removed bash login window guard (Python does it now)

--- a/.github/workflows/parallel-booking.yml
+++ b/.github/workflows/parallel-booking.yml
@@ -2,9 +2,10 @@ name: Thursday golf booking - Parallel (all 6 users)
 
 on:
   schedule:
-    # 06:00 UTC Thursday = 17:00 AEST (UTC+11) / 16:00 AEDT (UTC+10)
-    # Start early so all workers are logged in well before the 6:30pm draw.
-    - cron: "0 6 * * 4"
+    # 07:00 UTC Thursday = 18:00 AEDT (UTC+11, Oct–Apr) / 17:00 AEST (UTC+10, Apr–Oct)
+    # The script waits internally until 18:00 Sydney time before logging in,
+    # so this handles both AEDT and AEST automatically.
+    - cron: "0 7 * * 4"
   workflow_dispatch: {}
 
 jobs:
@@ -46,32 +47,6 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-
-      - name: Wait for Sydney login window (scheduled runs only)
-        if: github.event_name == 'schedule'
-        run: |
-          # Wait until 18:00 Sydney time before starting login
-          WINDOW_START=$((18 * 60))
-          WINDOW_END=$((18 * 60 + 15))
-          while true; do
-            SYD_HOUR=$(TZ=Australia/Sydney date +%H)
-            SYD_MIN=$(TZ=Australia/Sydney date +%M)
-            SYD_TOTAL=$((10#$SYD_HOUR * 60 + 10#$SYD_MIN))
-            if [ "$SYD_TOTAL" -lt "$WINDOW_START" ]; then
-              REMAIN=$((WINDOW_START - SYD_TOTAL))
-              SLEEP=$((REMAIN > 5 ? 300 : REMAIN * 60))
-              [ "$SLEEP" -le 0 ] && SLEEP=30
-              echo "Waiting for 18:00 Sydney (${SYD_HOUR}:${SYD_MIN}). Sleeping ${SLEEP}s."
-              sleep "$SLEEP"
-            elif [ "$SYD_TOTAL" -gt "$WINDOW_END" ]; then
-              echo "Past 18:15 — proceeding immediately (${SYD_HOUR}:${SYD_MIN})."
-              break
-            else
-              echo "In login window (${SYD_HOUR}:${SYD_MIN}) — proceeding."
-              break
-            fi
-          done
-          echo "Starting at $(TZ=Australia/Sydney date '+%Y-%m-%d %H:%M:%S %Z')"
 
       - name: Print Chrome versions
         run: |
