Add tee sheet verification + Gmail email notification
- verify_bookings(): logs in post-booking, reads tee sheet, checks all 6
  surnames are present, retries missing players if found
- send_confirmation_email(): Gmail SMTP with App Password, sends confirmed/
  failed summary with tee times to malachy.m.mullin@gmail.com
- main(): waits 30s after workers finish, verifies, then emails
- Workflow: adds GMAIL_USER + GMAIL_APP_PASSWORD secrets

--- a/.github/workflows/parallel-booking.yml
+++ b/.github/workflows/parallel-booking.yml
@@ -67,6 +67,8 @@ jobs:
           MIGOLF_PASS_5: ${{ secrets.MIGOLF_PASS_5 }}
           MIGOLF_USER_6: ${{ secrets.MIGOLF_USER_6 }}
           MIGOLF_PASS_6: ${{ secrets.MIGOLF_PASS_6 }}
+          GMAIL_USER: ${{ secrets.GMAIL_USER }}
+          GMAIL_APP_PASSWORD: ${{ secrets.GMAIL_APP_PASSWORD }}
           PYTHONUNBUFFERED: "1"
         run: python -u booking_script_parallel.py
 
