--- a/.github/workflows/parallel-booking.yml
+++ b/.github/workflows/parallel-booking.yml
@@ -6,7 +6,18 @@ on:
     # The script waits internally until 18:00 Sydney time before logging in,
     # so this handles both AEDT and AEST automatically.
     - cron: "0 7 * * 4"
-  workflow_dispatch: {}
+    # 07:00 UTC Friday = 18:00 AEDT — for Sunday events
+    - cron: "0 7 * * 5"
+  workflow_dispatch:
+    inputs:
+      target_day:
+        description: "Override target day (e.g. Sun)"
+        required: false
+        default: ""
+      target_date:
+        description: "Override target date (e.g. 1 Mar)"
+        required: false
+        default: ""
 
 jobs:
   parallel-book:
@@ -69,6 +80,8 @@ jobs:
           MIGOLF_PASS_6: ${{ secrets.MIGOLF_PASS_6 }}
           GMAIL_USER: ${{ secrets.GMAIL_USER }}
           GMAIL_APP_PASSWORD: ${{ secrets.GMAIL_APP_PASSWORD }}
+          OVERRIDE_TARGET_DAY: ${{ github.event.inputs.target_day }}
+          OVERRIDE_TARGET_DATE: ${{ github.event.inputs.target_date }}
           PYTHONUNBUFFERED: "1"
         run: python -u booking_script_parallel.py
 
